# JaipurGameTracker

./: .gitignore  CMakeLists.txt  Makefile  README.md  remove_cmakefiles.sh
Jaipur/: CMakeLists.txt  compile_debug.sh  compile_release.sh  game_data.json  jaipur_game_data.json  jaipur_game_state.json
Jaipur/src/: CMakeLists.txt  cli.h  config.h  game_constants.h  game_data.c  game_data.h  game_utils.h  jaipur.c  jaipur_game_state_template.json  utils.c  utils.h
data/: jaipur_game_state.json
src/: Makefile  cmake_install.cmake  config.h  config.h.in  game_constants.c  game_data.c  game_data.h  jaipur.c  utils.c  utils.h
